users and posts wired up

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,9 @@
 <h1 class="page-header"><RedditClone> </h1>
 
+<% @posts.each do |post| %>
+	<div class="well">
+	  <% post.title %>
+	</div>  
+<% end %>
+
 
